2007-07-19  Reinout van Rees  <reinout@zestsoftware.nl>

	* src/archgenxml/ArchetypesGenerator.py: Added <<atfile>>,
	<<atevent>> and <<atdocument>> stereotypes in addition to the
	already existing <<atfolder>>.

2007-05-30  Reinout van Rees  <reinout@zestsoftware.nl>

	* src/archgenxml/zopeimportfixer.py: Moved the zope import fixer
	and the logfile initializer to separate modules to clean up
	utils.py. (utils.py can now import zope stuff, too).

	* various files: Cleanup.	

2007-05-22  Reinout van Rees  <reinout@zestsoftware.nl>

	* src/archgenxml/ArchGenXML.py: Added first view (for generating a
	config.py). Still primitive, but I've at least moved off some code
	to a view. Also added a still-empty profiles/default genericsetup
	directory including registering it in the __init__.py and applying
	it in the install.py. Onwards to the next thing!

2007-03-06  Reinout van Rees  <reinout@vanrees.org>

	* src/archgenxml/ArchetypesGenerator.py: Pander added support for
	datagridwidget, atcolorpicker widget and atcountry widget. If you
	use them, you'll need to have those widgets available as they're
	not stock archetypes widgets.

2007-02-11  Reinout van Rees  <reinout@vanrees.org>

	* README.txt, INSTALL.txt and others: Updated readme for new 1.6
	development. Added INSTALL.txt installation instructions.

2006-10-02  Reinout van Rees  <reinout@vanrees.org>

	* All files: Jens Klein moved the 1.6 branch to trunk, what was
	trunk is now the 1.5 branch. The 1.6 branch has been removed. This
	is now finally the new full-speed archgenxml dev target again!

2006-10-02  Reinout van Rees  <reinout@vanrees.org>

	* numerous files: Backported changes from svn trunk (1.5
	maintenance branch)

2006-09-05  Reinout van Rees  <reinout@zestsoftware.nl>

	* src/archgenxml/templates/view_class.py: Added zope3 viewclass
	template and stereotype <<view_class>>.

2006-09-04  Reinout van Rees  <reinout@zestsoftware.nl>

	* src/archgenxml/: Zapped
	functionality belonging to zapped tgv's
